examples/invalid/semanticErr/exception/intInException.wacc
# The parameter in the threw Exception should be string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    try
        int x = 1;
        throw ArithmeticException(1)
    catch ArithmeticException e do
        println e
   done
end